# splynx-py-api

./: .pylintrc  LICENSE  README.md  env_example  pyproject.toml
src/splynx_py_api/: __init__.py  splynxapi_v2.py
